chore: remove all demo mode support and fix user jwt session call
